@@ -1,9 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2010/08/03 04:55:10 obache Exp $
-${GEM_HOME}/cache/soauth-${PKGVERSION}.gem
-${GEM_LIBDIR}/LICENSE
-${GEM_LIBDIR}/README.markdown
-${GEM_LIBDIR}/Rakefile
-${GEM_LIBDIR}/lib/soauth.rb
-${GEM_LIBDIR}/soauth.gemspec
-${GEM_LIBDIR}/test/soauth_test.rb
-${GEM_HOME}/specifications/soauth-${PKGVERSION}.gemspec
